--- a/index.html
+++ b/index.html
@@ -6,28 +6,112 @@
     <link rel="stylesheet" href="src/output.css" />
     <title>Rick and Morty</title>
   </head>
-  <body>
-    <h1 class="text-center font-bold text-3xl p-3">Rick and Morty</h1>
+  <body class="bg-gray-600">
+    <h1 class="text-center text-white font-bold text-3xl p-3">
+      Rick and Morty
+    </h1>
 
     <main class="flex justify-between">
-      <div class="bg-slate-800 text-white">sidebar</div>
-      <div class="flex items-center flex-col bg-gray-700 w-full">
-        <form>
-          <input
-            id="search"
-            type="text"
-            class="border appearance-none rounded p-1 focus:outline-none focus:border-gray-600 leading-tight"
-            placeholder="search your character"
-          />
-          <button
-            id="btnSearch"
-            class="px-2 py-1 bg-blue-500 text-white rounded"
-          >
-            Search
-          </button>
+      <div id="sidebar" class="bg-gray-800 text-white hidden">
+        <h3>Filter</h3>
+        <form action="">
+          <div class="">
+            <label for="episodes">Episodes:</label>
+            <select
+              class="text-black"
+              name="episodes"
+              id="episodes"
+              form=""
+            ></select>
+          </div>
+          <div class="">
+            <label for="locations">Locations:</label>
+            <select
+              class="text-black"
+              name="locations"
+              id="locations"
+              form=""
+            ></select>
+          </div>
         </form>
+      </div>
+      <div class="flex items-center flex-col p-4 bg-gray-700 w-full">
+        <div class="w-full flex justify-around items-center">
+          <button
+            id="filter"
+            class="text-white focus:outline-none flex items-center gap-2"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M10.5 6h9.75M10.5 6a1.5 1.5 0 1 1-3 0m3 0a1.5 1.5 0 1 0-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m-9.75 0h9.75"
+              />
+            </svg>
+
+            filter
+          </button>
+          <form>
+            <input
+              id="search"
+              type="text"
+              class="border appearance-none rounded p-1 focus:outline-none focus:border-gray-600 leading-tight"
+              placeholder="search your character"
+            />
+            <button
+              id="btnSearch"
+              class="px-2 py-1 bg-blue-500 text-white rounded"
+            >
+              Search
+            </button>
+          </form>
+        </div>
 
         <div id="content" class="grid grid-cols-3 gap-4 text-center m-4"></div>
+        <div id="pages" class="flex gap-4">
+          <button id="previousPage" class="text-white flex hidden">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6.75 15.75 3 12m0 0 3.75-3.75M3 12h18"
+              />
+            </svg>
+
+            Previous page
+          </button>
+          <button id="nextPage" class="flex text-white">
+            Next page
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </button>
+        </div>
       </div>
     </main>
   </body>
