--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="src/output.css" />
     <title>Rick and Morty</title>
   </head>
-  <body class="bg-gray-700">
-    <h1 class="text-center text-white font-bold bg-gray-600 text-3xl p-3">
-      Rick and Morty
+  <body class="bg-gray-800">
+    <h1 class="text-center text-green-500 font-bold bg-gray-700 text-3xl p-3">
+      <a href="index.html">Rick and Morty</a>
     </h1>
 
     <main>
-      <div class="flex items-center flex-col p-4 bg-gray-700 w-full">
+      <div class="flex items-center flex-col p-4 bg-gray-800 w-full">
         <div class="w-full flex justify-around items-center">
           <button
             id="filter"
