--- a/character.html
+++ b/character.html
@@ -12,8 +12,8 @@
     </h1>
 
     <main class="w-full flex justify-center h-full mt-10">
-      <div class="py-8 px-8 rounded-xl shadow-lg inline-block bg-gray-700">
-        <div class="flex gap-6">
+      <div class="py-8 px-8 rounded-xl shadow-lg inline-block bg-gray-700 m-2">
+        <div class="sm:flex gap-6">
           <img id="img" class="rounded-full" src="" alt="character" />
           <div class="text-center text-white space-y-2">
             <div class="space-y-0.5">
