--- a/character.html
+++ b/character.html
@@ -11,7 +11,7 @@
       <a href="index.html">Rick and Morty</a>
     </h1>
 
-    <main class="w-full flex justify-center h-full mt-10">
+    <main class="w-full flex justify-center mt-10">
       <div class="py-8 px-8 rounded-xl shadow-lg inline-block bg-gray-700 m-2">
         <div class="sm:flex gap-6">
           <img id="img" class="rounded-full" src="" alt="character" />
